fix gap

--- a/frontend/src/app/(content)/home/styles.module.scss
+++ b/frontend/src/app/(content)/home/styles.module.scss
@@ -3,7 +3,6 @@
 .home-page-container {
   display: flex;
   flex-direction: column;
-  gap: 48px;
   width: 90%;
   margin: 24px auto 0;
 
@@ -11,6 +10,7 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
+    margin-bottom: 70px;
 
     .header-main {
       display: grid;
@@ -95,6 +95,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 40px;
     row-gap: 1vh;
 
     .clock-icon {
